# team-29-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TESTING.md  TEST_STRATEGY.md  cloudbuild.yaml  codebase_prompt.py  codebase_prompt.txt  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  node.js.yml  python-app.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  branchthread.js  config.py  logging.py  main.py  models.py  security.py  test_api.py  test_api_prod_safe.py  test_integration.py  test_security.py
frontend/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  README.md  ensure-env.js  jest.config.mjs  next.config.ts  package-lock.json  package.json  run_tests.sh  tsconfig.json
frontend/src/__tests__/: Auth.test.tsx  AuthFlow.test.tsx  Chat.test.tsx  ChatJWT.test.tsx  ErrorHandlingTest.tsx  ModelSelection.test.tsx  apiClient.security.test.ts  apiClient.test.ts  modelUtils.test.ts
frontend/src/app/: ClientProviders.tsx  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/auth/: [abcdnextauth].abts.bk
frontend/src/app/auth/error/: page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/types/: models.ts  next-auth.d.ts
frontend/src/utils/: apiClient.ts  modelUtils.ts
